--- a/src/pages/score-item-two.html
+++ b/src/pages/score-item-two.html
@@ -10,142 +10,143 @@
 <body>
 
   <div class="page-box score-box">
-    <div class="page-head">
-      <span>高中生发展与核心能力评测（ACC）</span>
-      <span>核心能力评测（ACC）个人评价报告</span>
-    </div>
-
-    <div class="page-head-title">
-      <p class="pd-num">02</p>
-      <div class="pd-info">
-        <h1>考生在语文素养与应用学科各能力（素养）模块作答情况分析</h1>
-        <p>基于ACC测验目的、形式、时间等方面的考虑，根据《课程标准》、《考试大纲》，结合当前学科研究前沿，重点考察X个知识模块的内容。</p>
+    <div class="page-main">
+      <div class="page-head">
+        <span>高中生发展与核心能力评测（ACC）</span>
+        <span>核心能力评测（ACC）个人评价报告</span>
       </div>
-    </div>
 
-    <div class="sitem-cont">
-      <h3 class="cont-title tag-title">与全体考生比较</h3>
-      <div class="sitem-tables">
-        <div class="table-items">
-          <table class="table" cellspacing="0">
-            <thead>
-              <tr>
-                <th colspan="7">考生各能力（素养）模块答对率与全体考生的比较</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr class="th-sub">
-                <td rowspan="2">编号</td>
-                <td rowspan="2">学科能力</td>
-                <td rowspan="2">题数</td>
-                <td colspan="4">答对率</td>
-              </tr>
-              <tr class="th-sub">
-                <td>本人</td>
-                <td>平均</td>
-                <td>同水平</td>
-                <td>A等考生</td>
-              </tr>
-              <tr>
-                <td>E</td>
-                <td>分析综合能力</td>
-                <td>44</td>
-                <td>67.00%</td>
-                <td>67.00%</td>
-                <td>67.00%</td>
-                <td>67.00%</td>
-              </tr>
-              <tr>
-                <td>F</td>
-                <td>探索能力</td>
-                <td>14</td>
-                <td>86.00%</td>
-                <td>86.00%</td>
-                <td>86.00%</td>
-                <td>86.00%</td>
-              </tr>
-              <tr>
-                <td>G</td>
-                <td>理解能力</td>
-                <td>22</td>
-                <td>50.00%</td>
-                <td>50.00%</td>
-                <td>50.00%</td>
-                <td>50.00%</td>
-              </tr>
-              <tr>
-                <td>H</td>
-                <td>表达应用能力</td>
-                <td>22</td>
-                <td>50.00%</td>
-                <td>50.00%</td>
-                <td>50.00%</td>
-                <td>50.00%</td>
-              </tr>
-              <tr>
-                <td>I</td>
-                <td>记忆能力</td>
-                <td>22</td>
-                <td>50.00%</td>
-                <td>50.00%</td>
-                <td>50.00%</td>
-                <td>50.00%</td>
-              </tr>
-              <tr>
-                <td>J</td>
-                <td>鉴赏评价能力</td>
-                <td>22</td>
-                <td>50.00%</td>
-                <td>50.00%</td>
-                <td>50.00%</td>
-                <td>50.00%</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="table-items">
-          <table class="table" cellspacing="0">
-            <thead>
-              <tr>
-                <th colspan="3">考生各能力（素养）模块得分率与全体考生的比较</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td rowspan="2"></td>
-                <td rowspan="2">掌握相对较好</td>
-                <td rowspan="2">有待加强</td>
-              </tr>
-              <tr></tr>
-              <tr class="td-trow">
-                <td>与全体平均水平相比</td>
-                <td>E、F、G</td>
-                <td>H、I、J</td>
-              </tr>
-              <tr class="td-trow">
-                <td>与全体同等水平相比</td>
-                <td>E、F、G</td>
-                <td>H、I、J</td>
-              </tr>
-              <tr class="td-trow">
-                <td>与全体A等考生相比</td>
-                <td>E、F、G</td>
-                <td>H、I、J</td>
-              </tr>
-            </tbody>
-          </table>
+      <div class="page-head-title">
+        <p class="pd-num">02</p>
+        <div class="pd-info">
+          <h1>考生在语文素养与应用学科各能力（素养）模块作答情况分析</h1>
+          <p>基于ACC测验目的、形式、时间等方面的考虑，根据《课程标准》、《考试大纲》，结合当前学科研究前沿，重点考察X个知识模块的内容。</p>
         </div>
       </div>
-      <div class="chart-line" id="all-line"></div>
-      <div class="chart-bar" id="all-bar"></div>
-    </div>
 
+      <div class="sitem-cont">
+        <h3 class="cont-title tag-title">与全体考生比较</h3>
+        <div class="sitem-tables">
+          <div class="table-items">
+            <table class="table table-rows-6" cellspacing="0">
+              <thead>
+                <tr>
+                  <th colspan="7">考生各能力（素养）模块答对率与全体考生的比较</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr class="th-sub">
+                  <td rowspan="2">编号</td>
+                  <td rowspan="2">学科能力</td>
+                  <td rowspan="2">题数</td>
+                  <td colspan="4">答对率</td>
+                </tr>
+                <tr class="th-sub">
+                  <td>本人</td>
+                  <td>平均</td>
+                  <td>同水平</td>
+                  <td>A等考生</td>
+                </tr>
+                <tr>
+                  <td>E</td>
+                  <td>分析综合能力</td>
+                  <td>44</td>
+                  <td>67.00%</td>
+                  <td>67.00%</td>
+                  <td>67.00%</td>
+                  <td>67.00%</td>
+                </tr>
+                <tr>
+                  <td>F</td>
+                  <td>探索能力</td>
+                  <td>14</td>
+                  <td>86.00%</td>
+                  <td>86.00%</td>
+                  <td>86.00%</td>
+                  <td>86.00%</td>
+                </tr>
+                <tr>
+                  <td>G</td>
+                  <td>理解能力</td>
+                  <td>22</td>
+                  <td>50.00%</td>
+                  <td>50.00%</td>
+                  <td>50.00%</td>
+                  <td>50.00%</td>
+                </tr>
+                <tr>
+                  <td>H</td>
+                  <td>表达应用能力</td>
+                  <td>22</td>
+                  <td>50.00%</td>
+                  <td>50.00%</td>
+                  <td>50.00%</td>
+                  <td>50.00%</td>
+                </tr>
+                <tr>
+                  <td>I</td>
+                  <td>记忆能力</td>
+                  <td>22</td>
+                  <td>50.00%</td>
+                  <td>50.00%</td>
+                  <td>50.00%</td>
+                  <td>50.00%</td>
+                </tr>
+                <tr>
+                  <td>J</td>
+                  <td>鉴赏评价能力</td>
+                  <td>22</td>
+                  <td>50.00%</td>
+                  <td>50.00%</td>
+                  <td>50.00%</td>
+                  <td>50.00%</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="table-items">
+            <table class="table table-justy table-justy-6" cellspacing="0">
+              <thead>
+                <tr>
+                  <th colspan="3">考生各能力（素养）模块得分率与全体考生的比较</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr class="th-sub">
+                  <td rowspan="2"></td>
+                  <td rowspan="2">掌握相对较好</td>
+                  <td rowspan="2">有待加强</td>
+                </tr>
+                <tr></tr>
+                <tr>
+                  <td>与全体平均水平相比</td>
+                  <td>E、F、G</td>
+                  <td>H、I、J</td>
+                </tr>
+                <tr>
+                  <td>与全体同等水平相比</td>
+                  <td>E、F、G</td>
+                  <td>H、I、J</td>
+                </tr>
+                <tr>
+                  <td>与全体A等考生相比</td>
+                  <td>E、F、G</td>
+                  <td>H、I、J</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <div class="chart-line" id="all-line"></div>
+        <div class="chart-bar" id="all-bar"></div>
+      </div>
 
-    <div class="page-footer-tips">
-      <span class="tips-name bg-title-64">备注</span>
-      <div class="tips-detail">
-        <p>同水平考生：相同百分比排名（百分等级）的考生群体；</p>
-        <p>A等考生：排名前25%的考生群体；</p>
+      <div class="page-footer-tips">
+        <span class="tips-name bg-title-64">备注</span>
+        <div class="tips-detail">
+          <p>同水平考生：相同百分比排名（百分等级）的考生群体；</p>
+          <p>A等考生：排名前25%的考生群体；</p>
+        </div>
       </div>
     </div>
 
