--- a/src/school/page-three-cate.html
+++ b/src/school/page-three-cate.html
@@ -25,7 +25,7 @@
       <div class="score-tables">
         <h2 class="tag-title">本校各能力（素养）模块得分率与全体考生的比较</h2>
         <div class="items-tables">
-          <table class="table-sch" cellspacing="0">
+          <table class="table-sch table-rows-10" cellspacing="0">
             <thead>
               <tr class="th-gray">
                 <th></th>
@@ -99,9 +99,45 @@
                 <td>45.94%</td>
                 <td>53.00%</td>
               </tr>
+              <tr>
+                <td>J</td>
+                <td>鉴赏评价能力</td>
+                <td>22</td>
+                <td>51.63%</td>
+                <td>47.19%</td>
+                <td>45.94%</td>
+                <td>53.00%</td>
+              </tr>
+              <tr>
+                <td>J</td>
+                <td>鉴赏评价能力</td>
+                <td>22</td>
+                <td>51.63%</td>
+                <td>47.19%</td>
+                <td>45.94%</td>
+                <td>53.00%</td>
+              </tr>
+              <tr>
+                <td>J</td>
+                <td>鉴赏评价能力</td>
+                <td>22</td>
+                <td>51.63%</td>
+                <td>47.19%</td>
+                <td>45.94%</td>
+                <td>53.00%</td>
+              </tr>
+              <tr>
+                <td>J</td>
+                <td>鉴赏评价能力</td>
+                <td>22</td>
+                <td>51.63%</td>
+                <td>47.19%</td>
+                <td>45.94%</td>
+                <td>53.00%</td>
+              </tr>
             </tbody>
           </table>
-          <table class="table-sch" cellspacing="0">
+          <table class="table-sch table-rows-10" cellspacing="0">
             <thead>
               <tr class="th-gray">
                 <th></th>
