--- a/src/pages/score-item-one.html
+++ b/src/pages/score-item-one.html
@@ -8,7 +8,24 @@
   <link rel="stylesheet" type="text/css" href="/static/css/score.css">
 </head>
 <body>
-  
+  <style media="screen">
+    .page-head-title{
+      padding: 15px;
+    }
+    .table td, .table-sch td{
+      height: 30px;
+      font-size: 13px;
+    }
+    .table.table-justy-6 td{
+      height: 60px;
+    }
+    .sitem-cont .sitem-chart{
+      margin-top: 15px;
+    }
+    .page-footer-tips{
+      padding: 20px 32px;
+    }
+  </style>
   <div class="page-box score-box">
     <div class="page-head">
       <span>高中生发展与核心能力评测（ACC）</span>
@@ -27,7 +44,7 @@
       <h3 class="cont-title tag-title">与全体考生比较</h3>
       <div class="sitem-tables">
         <div class="table-items">
-          <table class="table" cellspacing="0">
+          <table class="table table-rows-6" cellspacing="0">
             <thead>
               <tr>
                 <th colspan="7">考生知识模块答对率与全体考生的比较</th>
@@ -73,11 +90,38 @@
                 <td>50.00%</td>
                 <td>50.00%</td>
               </tr>
+              <tr>
+                <td>C</td>
+                <td>现代文阅读</td>
+                <td>22</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+              </tr>
+              <tr>
+                <td>C</td>
+                <td>现代文阅读</td>
+                <td>22</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+              </tr>
+              <tr>
+                <td>C</td>
+                <td>现代文阅读</td>
+                <td>22</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+              </tr>
             </tbody>
           </table>
         </div>
         <div class="table-items">
-          <table class="table" cellspacing="0">
+          <table class="table table-justy-6" cellspacing="0">
             <thead>
               <tr>
                 <th colspan="3">考生知识模块得分率与全体考生的比较</th>
@@ -165,11 +209,38 @@
                 <td>50.00%</td>
                 <td>50.00%</td>
               </tr>
+              <tr>
+                <td>C</td>
+                <td>现代文阅读</td>
+                <td>22</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+              </tr>
+              <tr>
+                <td>C</td>
+                <td>现代文阅读</td>
+                <td>22</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+              </tr>
+              <tr>
+                <td>C</td>
+                <td>现代文阅读</td>
+                <td>22</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+              </tr>
             </tbody>
           </table>
         </div>
         <div class="table-items">
-          <table class="table" cellspacing="0">
+          <table class="table table-justy-6" cellspacing="0">
             <thead>
               <tr>
                 <th colspan="3">考生知识模块得分率与本省考生的比较</th>
