--- a/src/pages/score-item-two.html
+++ b/src/pages/score-item-two.html
@@ -27,7 +27,7 @@
       <h3 class="cont-title tag-title">与全体考生比较</h3>
       <div class="sitem-tables">
         <div class="table-items">
-          <table class="table table-rows-6" cellspacing="0">
+          <table class="table table-rows-10" cellspacing="0">
             <thead>
               <tr>
                 <th colspan="7">考生各能力（素养）模块答对率与全体考生的比较</th>
@@ -47,7 +47,7 @@
                 <td>A等考生</td>
               </tr>
               <tr>
-                <td>E</td>
+                <td>01</td>
                 <td>分析综合能力</td>
                 <td>44</td>
                 <td>67.00%</td>
@@ -56,7 +56,7 @@
                 <td>67.00%</td>
               </tr>
               <tr>
-                <td>F</td>
+                <td>02</td>
                 <td>探索能力</td>
                 <td>14</td>
                 <td>86.00%</td>
@@ -65,7 +65,7 @@
                 <td>86.00%</td>
               </tr>
               <tr>
-                <td>G</td>
+                <td>03</td>
                 <td>理解能力</td>
                 <td>22</td>
                 <td>50.00%</td>
@@ -74,7 +74,7 @@
                 <td>50.00%</td>
               </tr>
               <tr>
-                <td>H</td>
+                <td>04</td>
                 <td>表达应用能力</td>
                 <td>22</td>
                 <td>50.00%</td>
@@ -83,7 +83,43 @@
                 <td>50.00%</td>
               </tr>
               <tr>
-                <td>I</td>
+                <td>05</td>
+                <td>表达应用能力</td>
+                <td>22</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+              </tr>
+              <tr>
+                <td>06</td>
+                <td>表达应用能力</td>
+                <td>22</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+              </tr>
+              <tr>
+                <td>07</td>
+                <td>表达应用能力</td>
+                <td>22</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+              </tr>
+              <tr>
+                <td>08</td>
+                <td>表达应用能力</td>
+                <td>22</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+                <td>50.00%</td>
+              </tr>
+              <tr>
+                <td>09</td>
                 <td>记忆能力</td>
                 <td>22</td>
                 <td>50.00%</td>
@@ -92,7 +128,7 @@
                 <td>50.00%</td>
               </tr>
               <tr>
-                <td>J</td>
+                <td>10</td>
                 <td>鉴赏评价能力</td>
                 <td>22</td>
                 <td>50.00%</td>
@@ -104,7 +140,7 @@
           </table>
         </div>
         <div class="table-items">
-          <table class="table table-justy table-justy-6" cellspacing="0">
+          <table class="table table-justy table-justy-10" cellspacing="0">
             <thead>
               <tr>
                 <th colspan="3">考生各能力（素养）模块得分率与全体考生的比较</th>
