--- a/src/pages/score-item-four.html
+++ b/src/pages/score-item-four.html
@@ -24,16 +24,53 @@
 
     <div class="sitem-cont">
       <div class="chart-err">
-        <div class="chart-cont" id="err-point"></div>
-        <div class="chart-intro">
-          <p>知识模块：A1-XXX;A2-XXX;A3-XXX;A4-XXX;</p>
-        </div>
+        <div class="chart-cont" id="err-point1"></div>
       </div>
       <div class="chart-err">
-        <div class="chart-cont" id="err-capa"></div>
-        <div class="chart-intro">
-          <p>能力（素质）模块：A1-XXX;A2-XXX;A3-XXX;A4-XXX;</p>
-        </div>
+        <div class="chart-cont" id="err-point2"></div>
+      </div>
+      <div class="chart-intro">
+        <p>知识模块：A1-XXX;A2-XXX;A3-XXX;A4-XXX;</p>
+      </div>
+    </div>
+
+
+    <div class="page-footer-tips">
+      <span class="tips-name bg-title-64">备注</span>
+      <div class="tips-detail">
+        <p>难题：难度值在[0-0.3）之间；</p>
+        <p>中等难度题：难度值在[0.3-0.7]之间；</p>
+        <p>容易题：难度值在0.7以上；</p>
+        <p>题目难易度是以考生平均得分率为指标，与参加本次测试的考生（以各重点校中上水平为主要群体）水平有关。因此，这里计算出来题目难度较小，并不代表在常规考生中该题也简单。</p>
+      </div>
+    </div>
+
+    <div class="page-bot-num">03/4</div>
+
+  </div>
+
+  <div class="page-box score-box">
+    <div class="page-head">
+      <span>高中生发展与核心能力评测（ACC）</span>
+      <span>核心能力评测（ACC）个人评价报告</span>
+    </div>
+
+    <div class="page-head-title">
+      <p class="pd-num">04</p>
+      <div class="pd-info pd-info-mid">
+        <h1>考生错答题目难度情况分析</h1>
+      </div>
+    </div>
+
+    <div class="sitem-cont">
+      <div class="chart-err">
+        <div class="chart-cont" id="err-capa1"></div>
+      </div>
+      <div class="chart-err">
+        <div class="chart-cont" id="err-capa2"></div>
+      </div>
+      <div class="chart-intro">
+        <p>能力（素质）模块：A1-XXX;A2-XXX;A3-XXX;A4-XXX;</p>
       </div>
     </div>
 
