score main avatar

--- a/src/pages/score-main.html
+++ b/src/pages/score-main.html
@@ -9,24 +9,27 @@
 </head>
 <body>
 
-  <div class="page-box score-box">
+  <div class="page-box score-box score-overview">
     <div class="page-head">
       <span>高中生发展与核心能力评测（ACC）</span>
       <span>核心能力评测（ACC）个人评价报告</span>
     </div>
 
     <div class="page-user-info">
-      <h3 class="info-title tag-title">考生成绩</h3>
-      <ul class="info-list">
-        <li>姓名：韩梅梅</li>
-        <li>准考证号：01030013503</li>
-        <li>选&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;考：科学素养</li>
-      </ul>
-      <ul class="info-list">
-        <li>学校：北大附中</li>
-        <li>身份证号：42100220000</li>
-        <li>考试时间：2018年3月20日</li>
-      </ul>
+      <div class="user-avatar">
+        <img src="http://utest-test.oss-cn-qingdao.aliyuncs.com/ff80818162d2471f0162d258bf790002/ff8081815f6ca04f015f76ddeb48502e/8afda6173d0841d6bc0d0b6aca68b2ed.jpg" alt="user avatar">
+      </div>
+      <div class="user-main">
+        <h3 class="info-title tag-title">考生成绩</h3>
+        <ul class="info-list">
+          <li><span>姓名：韩梅梅</span></li>
+          <li><span>准考证号：01030013503</span></li>
+          <li><span>学校：北大附中</span></li>
+          <li><span>身份证号：42100220000</span></li>
+          <li><span>选考：科学素养</span></li>
+          <li><span>考试时间：2018年3月20日</span></li>
+        </ul>
+      </div>
     </div>
 
     <div class="user-score">
