--- a/src/index.html
+++ b/src/index.html
@@ -147,24 +147,27 @@
   </script>
   <!-- overview -->
   <script id="overview" type="text/html">
-    <div class="page-box score-box">
+    <div class="page-box score-box score-overview">
       <div class="page-head">
         <span>高中生发展与核心能力评测（ACC）</span>
         <span>核心能力评测（ACC）个人评价报告</span>
       </div>
       <% var user = overview.user %>
       <div class="page-user-info">
-        <h3 class="info-title tag-title">考生成绩</h3>
-        <ul class="info-list">
-          <li>姓名: <%:=user.name%></li>
-          <li>准考证号：<%:=user.zkzh%></li>
-          <li>选&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;考：<%:=user.choice%></li>
-        </ul>
-        <ul class="info-list">
-          <li>学校：<%:=user.school%></li>
-          <li>身份证号：<%:=user.idno%></li>
-          <li>考试时间：<%:=user.examTime%></li>
-        </ul>
+        <div class="user-avatar">
+          <img src="http://utest-test.oss-cn-qingdao.aliyuncs.com/ff80818162d2471f0162d258bf790002/ff8081815f6ca04f015f76ddeb48502e/8afda6173d0841d6bc0d0b6aca68b2ed.jpg" alt="user avatar">
+        </div>
+        <div class="user-main">
+          <h3 class="info-title tag-title">考生成绩</h3>
+          <ul class="info-list">
+            <li><span>姓名：<%:=user.name%></span></li>
+            <li><span>准考证号：<%:=user.zkzh%></span></li>
+            <li><span>学校：<%:=user.school%></span></li>
+            <li><span>身份证号：<%:=user.idno%></span></li>
+            <li><span>选考：<%:=user.choice%></span></li>
+            <li><span>考试时间：<%:=user.examTime%></span></li>
+          </ul>
+        </div>
       </div>
 
       <% var score = overview.score %>
