main school name

--- a/src/pages/score-main.html
+++ b/src/pages/score-main.html
@@ -24,7 +24,7 @@
         <ul class="info-list">
           <li><span>姓名：韩梅梅</span></li>
           <li><span>准考证号：01030013503</span></li>
-          <li><span>学校：北大附中</span></li>
+          <li><span>学校：北大附中北大附中北大附中北大附中北大附中北大附中</span></li>
           <li><span>身份证号：42100220000</span></li>
           <li><span>选考：科学素养</span></li>
           <li><span>考试时间：2018年3月20日</span></li>
